--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -90,49 +90,9 @@
     <script src="http://yandex.st/highlightjs/6.0/highlight.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script src="{{ asset('bundles/knpsymfony2bundles/js/jquery.hotkeys.js') }}"></script>
+    <script src="{{ asset('bundles/knpsymfony2bundles/js/jquery.ba-viewportoffset.min.js') }}"></script>
+    <script src="{{ asset('bundles/knpsymfony2bundles/js/keyboard.navigation.js') }}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-    <script type="text/javascript" charset="utf-8">
-        function onload() {
-            //code to control keyboard navigation
-            var listCount = $('.repo').size();
-            var curPosition = 0;
-
-            $('.repo').first().css('border','1px solid blue');
-
-            $(document).bind('keydown', 's', function() { $('#search-query').focus(); return false; });
-
-            $(document).bind('keydown', 'down', function() {
-                if (++curPosition < listCount) {
-                        $('.repo').eq(curPosition-1).css('border','1px solid #DDDDDD');
-                        $('.repo').eq(curPosition).css('border','1px solid blue');
-                        $('html, body').animate({scrollTop: $('.repo').eq(curPosition).offset().top}, 100);
-                } else {
-                    curPosition--;
-                }
-
-                return false;
-            });
-
-
-            $(document).bind('keydown', 'up', function(){
-                if (--curPosition >= 0) {
-                        $('.repo').eq(curPosition+1).css('border','1px solid #DDDDDD');
-                        $('.repo').eq(curPosition).css('border','1px solid blue');
-                        $('html, body').animate({scrollTop: $('.repo').eq(curPosition).offset().top}, 100);
-                } else{
-                    curPosition++;
-                }
-
-                return false;
-            });
-
-            $(document).bind('keydown', 'return', function() {
-                document.location = $('.repo').eq(curPosition).children('.generals').children('.repo-title').children('.name').attr('href');
-
-                return false;
-            });
-        }
-    </script>
     </body>
 </html>
