--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -43,6 +43,8 @@
             <input type="text" id="search-query" name="q" value="{% block search_query %}{% endblock %}" />
             <button id="search-btn" title="Submit search">Search</button>
         </form>
+        <div id="global-tip">Press 's' to focus the search field then navigate with ↓ / j, ↑ / k</div>
+        
         <div id="content" class="clearfix">
             <div id="content-title">
                 {% block content_title %}
