Add keyboard navigation to paginate

--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -43,7 +43,7 @@
             <input type="text" id="search-query" name="q" value="{% block search_query %}{% endblock %}" />
             <button id="search-btn" title="Submit search">Search</button>
         </form>
-        <div id="global-tip">Press 's' to focus the search field then navigate with ↓ / j, ↑ / k</div>
+        <div id="global-tip">Press 's' or '/' to focus the search field ('esc' will unfocus).<br>Use ↓ / j, ↑ / k and 'enter' to navigate. Use → / l, ← / h to paginate.</div>
         
         <div id="content" class="clearfix">
             <div id="content-title">
