Fix link to github repository

--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -61,7 +61,7 @@
                     <dt><a href="{{ path('bundle_list') }}">Symfony2 Bundles</a></dt>
                     <dd>
                         <ul>
-                            <li><a href="https://github.com/symfony2bundles">Show the code on Github</a></li>
+                            <li><a href="https://github.com/knplabs/symfony2bundles">Show the code on Github</a></li>
                             <li><a href="{{ path('api') }}">API</a></li>
                         </ul>
                     </dd>
