--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/show.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/show.html.twig
@@ -61,15 +61,15 @@
         </div>
     </div>
     {% endif %}
-
+    
     <div id="disqus_thread"></div>
     <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'symfony2bundles'; // required: replace example with your forum shortname
-    
-        // The following are highly recommended additional parameters. Remove the slashes in front to use.
+        var disqus_shortname = 's2b';
+        {% if app.environment == 'dev' %}
+        var disqus_developer = 1;
+        {% endif %}
         var disqus_identifier = '{{ repo.username }}_{{ repo.name }}';
-        var disqus_url = '{{ path('repo_show', {'username':repo.username,'name':repo.name}) }}';
+        var disqus_url = '{{ url('repo_show', {'username':repo.username, 'name':repo.name}) }}';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
@@ -78,6 +78,4 @@
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
 {% endblock %}
