--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Project/list.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Project/list.html.twig
@@ -1,9 +1,9 @@
 {% extends 'KnpSymfony2BundlesBundle:Repo:list.html.twig' %}
 
-{% block h1 %}Discover {{ repos.totalItemCount }} Symfony2 Projects{% endblock %}
+{% block title %}{% trans with {'%count%': repos.totalItemCount, '%sort%': sort} %}projects.meta.title{% endtrans %}{% endblock %}
 
-{% block title %}Discover {{ repos.totalItemCount }} Symfony2 Projects{% endblock %}
+{% block description %}{% trans with {'%count%': repos.totalItemCount, '%sort%': sort} %}projects.meta.description{% endtrans %}{% endblock %}
 
-{% block description %}All Open Source Symfony 2 Projects sorted by {{ sort }}{% endblock %}
+{% block h1 %}{% trans with {'%count%': repos.totalItemCount, '%sort%': sort} %}projects.title{% endtrans %}{% endblock %}
 
 {% block route_list %}{{ path('project_list', {'sort': field}) }}{% endblock %}
