--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/listBestScore.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/listBestScore.html.twig
@@ -1,5 +1,5 @@
 <div id="best-scored-bundles">
-    <h2>Best scored bundles</h2>
+    <h2>{% trans %}bundles.best.title{% endtrans %}</h2>
     <ul class="bundles_list">
         {%- for i, bundle in bundles %}
         <li class="bundle">
