--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Main/notFound.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Main/notFound.html.twig
@@ -1,6 +1,7 @@
 {% extends "KnpSymfony2BundlesBundle::layout.html.twig" %}
-{% block title %}404 - Page not found{% endblock %}
-{% block slogan %}There is nothing here.{% endblock %}
+
+{% block title %}{% trans %}notFound.meta.title{% endtrans %}{% endblock %}
+
 {% block content %}
 <div style="text-align: center;">
     <img src="{{ asset('bundles/knpsymfony2bundles/images/404.jpg') }}" alt="404 Not Found" />
