--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/User/show.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/User/show.html.twig
@@ -5,14 +5,14 @@
     <h1>{{ user.name }}</h1>
     <div class="actions">
         <div id="repo-gplusone"><g:plusone {% if user.blog %}href="{{ user.blog }}"{% endif %}></g:plusone></div>
-        <a class="button github" style="float:right; margin-top: 0px; margin-right: 40px;" href="{{ user.gitHubUrl }}">View on Github</a>
+        <a class="button github" style="float:right; margin-top: 0px; margin-right: 40px;" href="{{ user.gitHubUrl }}">{% trans %}users.show.github{% endtrans %}</a>
     </div>
 </div>
 {% endblock %}
 
 {% block title %}{{ user.name }} - {{ user.fullName }}{% endblock %}
 
-{% block description %}{{ user.fullName }} has {{ user.nbBundles }} Symfony2 bundles{% endblock %}
+{% block description %}{% trans with {'%username%': user.fullName, '%nb%': user.nbBundles} %}bundles.show.infos.score{% endtrans %}{% endblock %}
 
 {% block body_attributes %}id="developer-show"{% endblock %}
 
@@ -23,36 +23,36 @@
         {% endif %}
         <div class="card">
             <ul class="stats">
-                <li>Location: <span>{{ user.location }}</span></li>
-                <li>Last commit <span>{{ user.lastCommitAt|date('Y-m-d') }}</span></li>
-                <li>Num bundles <span>{{ user.nbBundles }}</span></li>
-                <li>Num projects <span>{{ user.nbProjects }}</span></li>
+                <li>{% trans %}users.show.stats.location{% endtrans %} <span>{{ user.location }}</span></li>
+                <li>{% trans %}users.show.stats.lastCommit{% endtrans %} <span>{{ user.lastCommitAt|date('date_format'|trans) }}</span></li>
+                <li>{% trans %}users.show.stats.nbBundles{% endtrans %} <span>{{ user.nbBundles }}</span></li>
+                <li>{% trans %}users.show.stats.nbProjects{% endtrans %} <span>{{ user.nbProjects }}</span></li>
                 {% if user.blog %}
-                <li>My website <span><a href="{{ user.blog }}">{{ user.blog }}</a></span></li>
+                <li>{% trans %}users.show.stats.blog{% endtrans %} <span><a href="{{ user.blog }}">{{ user.blog }}</a></span></li>
                 {% endif %}
             </ul>
         </div>
         {%- if user.bundles|length > 0 %}
         <div class="bundles-i-manage">
-            <h2>Bundles I manage</h2>
+            <h2>{% trans %}users.show.bundles_manage{% endtrans %}</h2>
             {% include 'KnpSymfony2BundlesBundle:Bundle:mediumList.html.twig' with {'repos': user.bundles} %}
         </div>
         {%- endif %}
         {%- if user.contributionBundles|length > 0 %}
         <div class="bundles-i-contribute-to">
-            <h2>Bundles I contribute to</h2>
+            <h2>{% trans %}users.show.bundles_contribute{% endtrans %}</h2>
             {% include 'KnpSymfony2BundlesBundle:Bundle:mediumList.html.twig' with {'repos': user.contributionBundles} %}
         </div>
         {%- endif %}
         {%- if user.projects|length > 0 %}
         <div class="projects-i-manage">
-            <h2>Projects I manage</h2>
+            <h2>{% trans %}users.show.projects_manage{% endtrans %}</h2>
             {% include 'KnpSymfony2BundlesBundle:Project:mediumList.html.twig' with {'repos': user.projects} %}
         </div>
         {%- endif %}
         {% if user.contributionProjects|length > 0 %}
         <div class="projects-i-contribute-to">
-            <h2>Projects I contribute to</h2>
+            <h2>{% trans %}users.show.projects_contribute{% endtrans %}</h2>
             {% include 'KnpSymfony2BundlesBundle:Project:mediumList.html.twig' with {'repos': user.contributionProjects} %}
         </div>
         {%- endif %}
