--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -61,7 +61,7 @@
             </form>
             <div id="global-tip">{% trans %}search.tooltip.0{% endtrans %}<br>{% trans %}search.tooltip.1{% endtrans %}</div>
         
-            <div id="content" class="clearfix">
+            <div id="content" class="center clearfix">
                 <div id="content-title">
                     {% block content_title %}
                     <h1>{% block h1 %}{% endblock %}</h1>
