--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/show.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block body_attributes %}id="repo-show"{% endblock %}
 
-{% block title %}{% trans with {'name': repo.name, 'username': repo.username} %}bundles.show.meta.title{% endtrans %}{% endblock %}
+{% block title %}{% trans with {'%name%': repo.name, '%username%': repo.username} %}bundles.show.meta.title{% endtrans %}{% endblock %}
 
 {% block content_title %}
 <div id="repo-title">
